Added boilerplate sass

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="header">
 	<div class="headercontainer">
 		<div class="headcontents">
-			<h1>Filina's Apartments</h>
+			<h1>Filina's Apartments</h1>
 		</div>
 	</div>
   </div>
